--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: inherit;
 }
 
 .nav .list-link {
@@ -38,7 +38,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: inherit;
 }
 
 .nav .list-link:hover,
@@ -49,6 +49,7 @@ a {
 .address-link {
   font-family: inherit;
   font-style: normal;
+
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -61,7 +62,7 @@ a {
 }
 
 .hero {
-  background: #2e2f42;
+  background-color: #2e2f42;
 }
 
 .hero-title {
@@ -94,7 +95,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: inherit;
 }
 
 .about-us-p,
@@ -111,7 +112,7 @@ a {
 }
 
 .team-item {
-  background-color: #fff;
+  background-color: #ffff;
 }
 
 .logo-footer {
