--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
-  color: #2e2f42;
+  color: #434455;
   background-color: #ffff;
 }
 
@@ -29,7 +29,7 @@ a {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: inherit;
+  color: #2e2f42;
 }
 
 .nav .list-link {
@@ -38,7 +38,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: inherit;
+  color: #2e2f42;
 }
 
 .nav .list-link:hover,
@@ -49,11 +49,10 @@ a {
 .address-link {
   font-family: inherit;
   font-style: normal;
-
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: inherit;
 }
 
 .address-link:hover,
@@ -95,7 +94,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: inherit;
+  color: #2e2f42;
 }
 
 .about-us-p,
@@ -104,7 +103,16 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: inherit;
+}
+
+.team-title,
+.portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .our-team {
