--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ a {
   text-decoration: none;
 }
 
-.logo {
+.logo,
+.logo-footer {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -130,7 +131,7 @@ a {
   background-color: #ffff;
 }
 
-.logo-footer {
+.logo-part-footer {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
